add requirement soft

--- a/mysite/mysite/templates/index.html
+++ b/mysite/mysite/templates/index.html
@@ -35,7 +35,11 @@ table.stocklist {
 请注意：图片的上方有视频时长和分辨率。购买视频时请把截图作为附件发到邮箱：lordofcarry@foxmail.com中
 </td>
 </tr>
-
+<tr>
+<td align="center">
+请访问<a href="http://115.28.146.228:9000/">http://115.28.146.228:9000/</a>,原地址http://115.28.146.228/将不再更新视频截图,谢谢
+</td>
+</tr>
 
 <tr>
 <td align="center">
