--- a/mysite/mysite/templates/howtobuy.html
+++ b/mysite/mysite/templates/howtobuy.html
@@ -8,6 +8,7 @@
 <strong>请将视频截图下方的文字复制下来，将其发到邮箱lordofcarry@foxmail.com中。付款方式可以是支付宝、银行卡充值或者为站长手机充值。</strong>
 </div>
 <div class="row">
+<strong>站长QQ是：517442858。</strong>
 <small>请注意，视频截图的上方有分辨率和时长，请在意的同学慎重选择，谢谢支持</small>
 </div>
 <div class="row">
