--- a/mysite/mysite/templates/base.html
+++ b/mysite/mysite/templates/base.html
@@ -22,7 +22,8 @@
            <div class="container-liquid">  
                 <a class="navbar-brand" href="/" target="_blank">视频首页</a>  
 				<a class="navbar-brand" href="/mynovel/main" target="_blank">小说</a> 
-				<a class="navbar-brand" href="/howtobuy" target="_blank">如何购买视频</a> 
+				<a class="navbar-brand" href="/howtobuy">如何购买视频</a> 
+				<a class="navbar-brand" href="/latestvideo">站长最新上传视频</a> 
            </div>  
        </div>  
    </div>  
