--- a/mysite/mysite/templates/base.html
+++ b/mysite/mysite/templates/base.html
@@ -2,7 +2,7 @@
 <html>  
 <head>  
     <meta charset="UTF-8">  
-    <title>video</title>  
+    <title>昏迷视频分享</title>  
     {% load bootstrap3 %}
     {% bootstrap_css %}
     {# IE doesn't support js % bootstrap_javascript % #}
@@ -20,10 +20,11 @@
    <div class="navbar navbar-inverse">  
        <div class="navbar-inner">  
            <div class="container-liquid">  
-                <a class="navbar-brand" href="/" target="_blank">视频首页</a>  
+                <a class="navbar-brand" href="/">视频首页</a>  
 				<a class="navbar-brand" href="/mynovel/main" target="_blank">小说</a> 
 				<a class="navbar-brand" href="/howtobuy">如何购买视频</a> 
 				<a class="navbar-brand" href="/latestvideo">站长最新上传视频</a> 
+				<a class="navbar-brand" href="http://tieba.baidu.com/f?ie=utf-8&kw=%E6%98%8F%E8%BF%B7" target="_blank">百度贴吧</a> 
            </div>  
        </div>  
    </div>  
