--- a/mysite/mysite/templates/picdetail.html
+++ b/mysite/mysite/templates/picdetail.html
@@ -18,13 +18,22 @@
 专业视频片断/m-f-fetish-fair-basement-firemans-lift-by-masked-man.wmv<br/>
 girl_carry_girl/昏迷抱/叠影惊潮.rm</small>
 </div>
-<br/>
+<br/><br/><br/>
 <div class="row">
-<h2>这行文字就在截图的下方：</h2>
-<img src="/example.jpg" class="img-responsive" alt="Responsive image" /> </a><br/><br/>
-</div>
-<div class="row">
-<small>推荐使用IE、chrome等高版本浏览器，可以更好的浏览本站</small>
+<!-- Duoshuo Comment BEGIN -->
+	<div class="ds-thread"></div>
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"videoshare"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = 'http://static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		|| document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
+<!-- Duoshuo Comment END -->
 </div>
 
 {% endblock %}  
